Update searchBar style - fix positioning on small screens

--- a/src/components/search/styles.css
+++ b/src/components/search/styles.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 260px;
+    padding: 260px;
 }
 
 .search-input {
